# kaku-amsalu

./: .gitignore  README.md  build.sh  log.txt  main.py  manage.py  pyproject.toml  render.yaml
.github/workflows/: keepalive.yml
apps/api/: admin.py
apps/core/: admin.py  context_processors.py  forms.py  models.py  sitemaps.py  views.py
apps/core/management/commands/: seed_portfolio.py
apps/core/migrations/: 0001_initial.py
apps/projects/: admin.py  models.py
apps/projects/migrations/: 0001_initial.py
apps/resume/: admin.py  models.py
apps/resume/migrations/: 0001_initial.py
apps/services/: admin.py  models.py
apps/services/migrations/: 0001_initial.py
apps/skills/: admin.py  models.py
apps/skills/migrations/: 0001_initial.py
kaku_portfolio/: admin.py  asgi.py  urls.py  wsgi.py
kaku_portfolio/settings/: base.py  dev.py  prod.py
static/css/: cinematic.css  one_page.css
static/js/: cinematic.js
templates/: base.html  cinematic.html  one_page.html  project_detail.html
templates/partials/: _about.html  _about_cinematic.html  _contact.html  _contact_cinematic.html  _footer.html  _hero.html  _hud.html  _intro.html  _nav.html  _project_panel.html  _projects_onepage.html  _resume.html  _resume_cinematic.html  _seo_meta.html  _services.html  _services_cinematic.html  _skills.html  _skills_ticker.html  _works_divider.html
templates/projects/frames/: airbnb.html  custom.html  escrow.html  github.html  medimap.html  timesheet.html
